compiler/testData/checkerWithErrorTypes/full/RecursiveTypeInference.jet
namespace a {
    val foo = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>bar()<!>

    fun bar() = foo
}

namespace b {
    fun foo() = bar()

    fun bar() = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>foo()<!>
}

namespace c {
    fun bazz() = bar()

    fun foo() = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>bazz()<!>

    fun bar() = foo()
}

namespace ok {

    namespace a {
        val foo = bar()

        fun bar() : Int = foo
    }

    namespace b {
        fun foo() : Int = bar()

        fun bar() = foo()
    }

    namespace c {
        fun bazz() = bar()

        fun foo() : Int = bazz()

        fun bar() = foo()
    }
}
